@@ -1471,7 +1471,7 @@ textarea")))
 	major-mode 'w3m-form-input-select-mode)
   (setq buffer-read-only t)
   (use-local-map w3m-form-input-select-keymap)
-  (run-hooks 'w3m-form-input-select-mode-hook))
+  (w3m-run-mode-hooks 'w3m-form-input-select-mode-hook))
 
 (defun w3m-form-input-select (form id name)
   (let* ((value (w3m-form-get form id))
@@ -1636,7 +1636,7 @@ textarea")))
 	major-mode 'w3m-form-input-map-mode)
   (setq buffer-read-only t)
   (use-local-map w3m-form-input-map-keymap)
-  (run-hooks 'w3m-form-input-map-mode-hook))
+  (w3m-run-mode-hooks 'w3m-form-input-map-mode-hook))
 
 (defun w3m-form-input-map (form name)
   (let* ((value (w3m-form-get-by-name form name))
